Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.VB

    Public Declare Function C13_MsgBlockWr Lib "C13W32.DLL" Alias "_C13_MsgBlockWr@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_MsgCheck Lib "C13W32.DLL" Alias "_C13_MsgCheck@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C13_MsgCommRd Lib "C13W32.DLL" Alias "_C13_MsgCommRd@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_MsgCommWr Lib "C13W32.DLL" Alias "_C13_MsgCommWr@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_MsgConfig Lib "C13W32.DLL" Alias "_C13_MsgConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_MsgConfigEx Lib "C13W32.DLL" Alias "_C13_MsgConfigEx@12" (ByVal configval As UInt32, ByVal cwd As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_MsgCWD1Rd Lib "C13W32.DLL" Alias "_C13_MsgCWD1Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_MsgCWD1Wr Lib "C13W32.DLL" Alias "_C13_MsgCWD1Wr@12" (ByVal cwd1 As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function C13_MsgCWD2Rd Lib "C13W32.DLL" Alias "_C13_MsgCWD2Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_MsgCWD2Wr Lib "C13W32.DLL" Alias "_C13_MsgCWD2Wr@12" (ByVal cwd2 As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function C13_MsgErrorRd Lib "C13W32.DLL" Alias "_C13_MsgErrorRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_MsgErrorWr Lib "C13W32.DLL" Alias "_C13_MsgErrorWr@12" (ByVal value As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function C13_MsgFlagRd Lib "C13W32.DLL" Alias "_C13_MsgFlagRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_MsgFlagWr Lib "C13W32.DLL" Alias "_C13_MsgFlagWr@12" (ByVal msgflag As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function C13_MsgIsAccessed Lib "C13W32.DLL" Alias "_C13_MsgIsAccessed@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_MsgOptRd Lib "C13W32.DLL" Alias "_C13_MsgOptRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_MsgOptWr Lib "C13W32.DLL" Alias "_C13_MsgOptWr@12" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function C13_MsgReset Lib "C13W32.DLL" Alias "_C13_MsgReset@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_MsgSWD1Rd Lib "C13W32.DLL" Alias "_C13_MsgSWD1Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C13_MsgSWD2Rd Lib "C13W32.DLL" Alias "_C13_MsgSWD2Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C13_Mul Lib "C13W32.DLL" Alias "_C13_Mul@8" (ByVal mula As UInt32, ByVal mulb As UInt32) As UInt32
    Public Declare Function C13_PlayClear Lib "C13W32.DLL" Alias "_C13_PlayClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_PlayConfigEx Lib "C13W32.DLL" Alias "_C13_PlayConfigEx@20" (ByVal configval As UInt32, ByVal playcount As UInt32, ByVal seqcount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_PlayConfigExx Lib "C13W32.DLL" Alias "_C13_PlayConfigExx@28" (ByVal configval As UInt32, ByVal playaddr As UInt32, ByVal playcount As UInt32, ByVal seqaddr As UInt32, ByVal seqcount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_PlayStatus Lib "C13W32.DLL" Alias "_C13_PlayStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_PlayWrEx Lib "C13W32.DLL" Alias "_C13_PlayWrEx@12" (ByRef buf As UInt16, ByVal bufcount As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C13_PortRd Lib "C13W32.DLL" Alias "_C13_PortRd@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As Byte
    Public Declare Sub C13_PortWr Lib "C13W32.DLL" Alias "_C13_PortWr@12" (ByVal value As Byte, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function C13_ProgRdW Lib "C13W32.DLL" Alias "_C13_ProgRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_ProgWrW Lib "C13W32.DLL" Alias "_C13_ProgWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C13_RAMFill Lib "C13W32.DLL" Alias "_C13_RAMFill@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal handleval As UInt32)
    Public Declare Function C13_RAMRdB Lib "C13W32.DLL" Alias "_C13_RAMRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C13_RAMRdL Lib "C13W32.DLL" Alias "_C13_RAMRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub C13_RAMRdsW Lib "C13W32.DLL" Alias "_C13_RAMRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal handleval As UInt32)
    Public Declare Function C13_RAMRdW Lib "C13W32.DLL" Alias "_C13_RAMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_RAMWipe Lib "C13W32.DLL" Alias "_C13_RAMWipe@4" (ByVal handleval As UInt32)
    Public Declare Sub C13_RAMWipeEx Lib "C13W32.DLL" Alias "_C13_RAMWipeEx@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C13_RAMWrB Lib "C13W32.DLL" Alias "_C13_RAMWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub C13_RAMWrL Lib "C13W32.DLL" Alias "_C13_RAMWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub C13_RAMWrsW Lib "C13W32.DLL" Alias "_C13_RAMWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub C13_RAMWrW Lib "C13W32.DLL" Alias "_C13_RAMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function C13_RTConfigEx Lib "C13W32.DLL" Alias "_C13_RTConfigEx@12" (ByVal configval As UInt32, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_RTConfigExx Lib "C13W32.DLL" Alias "_C13_RTConfigExx@12" (ByVal configval As UInt32, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_RTCreateListEx Lib "C13W32.DLL" Alias "_C13_RTCreateListEx@36" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_RTCreateListExx Lib "C13W32.DLL" Alias "_C13_RTCreateListExx@36" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_RTReset Lib "C13W32.DLL" Alias "_C13_RTReset@8" (ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_RTStatus Lib "C13W32.DLL" Alias "_C13_RTStatus@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C13_RTSWDRd Lib "C13W32.DLL" Alias "_C13_RTSWDRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C13_SchedBuild Lib "C13W32.DLL" Alias "_C13_SchedBuild@16" (ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef freq As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_SchedBuildEx Lib "C13W32.DLL" Alias "_C13_SchedBuildEx@28" (ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef freq As Int32, ByRef period As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_SchedBuildExx Lib "C13W32.DLL" Alias "_C13_SchedBuildExx@28" (ByVal frametime As UInt32, ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef period As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_SchedCalc Lib "C13W32.DLL" Alias "_C13_SchedCalc@8" (ByRef msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Sub C13_SchedDisplay Lib "C13W32.DLL" Alias "_C13_SchedDisplay@8" (ByVal nummsgs As UInt32, ByRef count As UInt32)
    Public Declare Sub C13_SchedHook Lib "C13W32.DLL" Alias "_C13_SchedHook@8" (ByVal index As Int32, ByVal ptr As IntPtr)
    Public Declare Function C13_SchedInsEnd Lib "C13W32.DLL" Alias "_C13_SchedInsEnd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_SchedInsMsg Lib "C13W32.DLL" Alias "_C13_SchedInsMsg@12" (ByVal index As UInt32, ByRef msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_SchedInsStart Lib "C13W32.DLL" Alias "_C13_SchedInsStart@12" (ByVal frametime As UInt32, ByVal count As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_SchedMaxval Lib "C13W32.DLL" Alias "_C13_SchedMaxval@8" (ByRef arrayval As UInt32, ByVal arrayvalcount As UInt32) As UInt32
    Public Declare Function C13_SchedMinval Lib "C13W32.DLL" Alias "_C13_SchedMinval@8" (ByRef arrayval As UInt32, ByVal arrayvalcount As UInt32) As UInt32
    Public Declare Sub C13_SchedPrint Lib "C13W32.DLL" Alias "" (ByVal ParamArray list() As String)
    Public Declare Function C13_SerialClear Lib "C13W32.DLL" Alias "_C13_SerialClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_SerialConfig Lib "C13W32.DLL" Alias "_C13_SerialConfig@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_SerialConfigEx Lib "C13W32.DLL" Alias "_C13_SerialConfigEx@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_SerialStatus Lib "C13W32.DLL" Alias "_C13_SerialStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_SerialWr Lib "C13W32.DLL" Alias "_C13_SerialWr@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_Shl Lib "C13W32.DLL" Alias "_C13_Shl@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function C13_Shr Lib "C13W32.DLL" Alias "_C13_Shr@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Sub C13_TimerClear Lib "C13W32.DLL" Alias "_C13_TimerClear@4" (ByVal handleval As UInt32)
    Public Declare Function C13_TimerRd Lib "C13W32.DLL" Alias "_C13_TimerRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_TimerResolution Lib "C13W32.DLL" Alias "_C13_TimerResolution@8" (ByVal timerresol As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_TimerResolutionEx Lib "C13W32.DLL" Alias "_C13_TimerResolutionEx@8" (ByVal timershift As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C13_ValFromAscii Lib "C13W32.DLL" Alias "_C13_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Int32) As UInt32
    Public Declare Function C13_ValGetBits Lib "C13W32.DLL" Alias "_C13_ValGetBits@12" (ByVal oldvalue As UInt16, ByVal startbit As Int32, ByVal endbit As Int32) As UInt16
    Public Declare Function C13_ValPackRTCWD Lib "C13W32.DLL" Alias "_C13_ValPackRTCWD@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal count As Int32) As UInt16
